log/build_2022-12-08_02-10-42/cam_subscriber/stderr.log
  File "/home/april/workAreas/apriltag_ws/install/cam_subscriber/lib/python3.8/site-packages/cam_subscriber/AprilTag_Cam_Subscriber.py", line 49
    bool detected = False;
         ^
SyntaxError: invalid syntax

